<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/base_text_size"
        android:layout_marginTop="@dimen/margin_title_top"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        style="@style/MainButtons"
        android:id="@+id/search_button"
        android:text="@string/search"
        android:layout_marginTop="40dp"
        app:icon="@drawable/search" />

    <Button
        style="@style/MainButtons"
        android:id="@+id/library_button"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button
        style="@style/MainButtons"
        android:id="@+id/settings_button"
        android:text="@string/settings"
        android:layout_marginBottom="28dp"
        app:icon="@drawable/settings" />

</LinearLayout>