<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_marginTop="@dimen/corner_margin"
            android:layout_marginStart="@dimen/corner_margin"
            app:tint="?attr/tint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="@dimen/margin_title_top"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/base_text_size"
            android:fontFamily="@font/ys_display_medium" />

    </LinearLayout>

    <Switch
        style="@style/SettingsButtons"
        android:layout_marginTop="40dp"
        android:text="@string/dark_theme"
        android:paddingEnd="5dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        style="@style/SettingsButtons"
        android:id="@+id/share_button"
        android:text="@string/share"
        android:paddingEnd="16dp"
        app:icon="@drawable/share" />

    <Button
        style="@style/SettingsButtons"
        android:id="@+id/support_button"
        android:text="@string/support"
        android:paddingEnd="14dp"
        app:icon="@drawable/support" />

    <Button
        style="@style/SettingsButtons"
        android:id="@+id/agreement_button"
        android:text="@string/agreement"
        android:paddingEnd="20dp"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>
