<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_marginTop="@dimen/corner_margin"
            android:layout_marginStart="@dimen/corner_margin"
            app:tint="@color/tint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="@dimen/margin_title_top"
            android:text="@string/search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/base_text_size"
            android:fontFamily="@font/ys_display_medium" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="@dimen/search_margin_horizontal"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search14"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            app:tint="@color/hint_text"/>

        <EditText
            android:id="@+id/query_input"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@color/search_background"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text"
            android:textSize="@dimen/settings_text_size"
            tools:ignore="TouchTargetSizeCheck"
            android:imeOptions="actionDone"
            android:singleLine="true"/> />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear12"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="13dp"
            android:visibility="gone"
            app:tint="@color/hint_text" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_track"
        tools:itemCount="7"/>

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_gravity="center"
        tools:src="@drawable/something_went_wrong"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="24dp"
        tools:text="Текст с ошибкой"
        android:visibility="gone"/>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:text="@string/refresh"
        android:textColor="?attr/background"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:visibility="gone"
        app:cornerRadius="54dp" />

    <LinearLayout
        android:id="@+id/searchHistoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/search_history_hint"
            android:textSize = "19sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/TracksHistoryRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="13dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            />

        <Button
            android:id="@+id/search_clear_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/clear_history"
            android:textColor="?attr/background"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="54dp"/>

    </LinearLayout>

</LinearLayout>
